feat: Add zod for runtime type validation

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
 	"peerDependencies": {
 		"typescript": "^5.0.0"
 	},
-	"trustedDependencies": ["@biomejs/biome"]
+	"trustedDependencies": ["@biomejs/biome"],
+	"dependencies": {
+		"zod": "^3.23.8"
+	}
 }
