--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"dependencies": {
 		"bignumber.js": "^9.1.2",
 		"bs58": "^6.0.0",
+		"fastpriorityqueue": "^0.7.5",
 		"neverthrow": "^8.1.1",
 		"pino": "^9.5.0",
 		"pino-pretty": "^13.0.0",
