--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"trustedDependencies": ["@biomejs/biome"],
 	"dependencies": {
 		"@grammyjs/auto-retry": "^2.0.2",
+		"@grammyjs/commands": "^1.0.3",
 		"@grammyjs/parse-mode": "^1.10.0",
 		"bignumber.js": "^9.1.2",
 		"bs58": "^6.0.0",
