--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@grammyjs/parse-mode": "^1.10.0",
 		"bignumber.js": "^9.1.2",
 		"bs58": "^6.0.0",
+		"deno2node": "^1.14.0",
 		"drizzle-orm": "^0.38.0",
 		"drizzle-zod": "^0.6.0",
 		"fastpriorityqueue": "^0.7.5",
